# fastapi-jwt-auth

./: pyproject.toml
fapi_auth/: config.py  db.py  main.py  oauth2.py  utils.py
fapi_auth/models/: users.py
fapi_auth/routers/: auth.py  users.py
fapi_auth/schemas/: users.py
