[tool.poetry]
name = "fapi-auth"
version = "0.1.0"
description = ""
authors = ["Austinstevesk <austinstevesk@gmail.com>"]
readme = "README.md"
packages = [{include = "fapi_auth"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.1.1"}
sqlalchemy = "^2.0.19"
fastapi-jwt = "^0.1.12"
pydantic-settings = "^2.0.2"
psycopg2 = "^2.9.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
black = "^23.7.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
